[package]
name = "doh-im-dumb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = "0.6.20"
hickory-resolver = "0.24.0"
hickory-server = { version = "0.24.0", features = ["dns-over-https-rustls"] }
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
